packages/spark/base/inputs/_svg-icon-input.scss
.sprk-b-TextInputIconContainer,
.sprk-b-InputContainer__icon-container {
  position: relative;
}

.sprk-b-InputContainer__icon-container--narrow {
  max-width: $sprk-input-container-narrow-max-width;
}

// TODO: .sprk-b-InputContainer__icon-container .sprk-c-Icon is a fallback to be deprecated later
.sprk-b-InputContainer__icon-container .sprk-c-Icon,
.sprk-b-TextInputIconContainer .sprk-c-Icon,
.sprk-b-InputContainer__icon {
  margin-left: $sprk-input-icon-offset-x;
  // TODO: We should be using margin bottom, not margin top
  margin-top: $sprk-input-icon-offset-y;
  position: absolute;
  z-index: $sprk-input-icon-z-index;
}

// Specificity needed to override {.sprk-b-TextInputIconContainer .sprk-c-Icon}
.sprk-b-InputContainer__icon-container .sprk-b-InputContainer__icon--right {
  top: $sprk-input-has-icon-right-top;
  left: $sprk-input-has-icon-right-left;
  margin: 0;
  stroke-width: $sprk-icon-custom-stroke-width-s;
  fill: $sprk-icon-filled-fill-color;
}

.sprk-b-InputContainer--huge {
  // TODO: We should be using margin bottom, not margin top
  .sprk-b-TextInputIconContainer .sprk-c-Icon {
    margin-top: $sprk-input-huge-icon-offset-y;
  }
}

